test/expected/declare_uc8.out
declare x as unsigned char8_t
        ^
9: error: "unsigned char8_t" is illegal for built-in type
